# sec-certs

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  awesome_search_examples.md  cc_analysis_on_fips.py  cc_cli.py  cc_oop_demo.py  cli.py  codecov.yml  cve_matching.py  dev_requirements.txt  documentation.md  example.config.py  example.settings.yaml  fabfile.py  fips_certificates.py  fips_cli.py  fips_oop_demo.py  freeze.py  in_process.py  known.txt  main.py  oop_demo.py  process_certificates.py  pyproject.toml  pytest.ini  requirements.txt  run.py  settings.json  (+3 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: GA_CI.yml  build_wheel.yml  codacy-analysis.yml  code-ql.yml  cron.yml  docker-image.yml  docs.yml  draft_release.yml  get_version.yml  lint.yml  mypy.yml  new_lint.yml  page.yml  pre-commit-page.yml  pre-commit.yml  print_version.yml  python-publish.yml  release.yml  test.yml  tests-page.yml  tests.yml  try_multiarch_build.yml
config/: example.config.py  example.settings.yaml  example.uwsgi.ini
data/: readme.md
data/cert_id_eval/: cert_id_eval.ipynb  duplicate_documents.ipynb  duplicate_ids.csv  missing_ids.csv  random.csv  random_references.csv  truth.csv
data/cert_ids/: random.csv
data/cpe_eval/: manual_cpe_labels.json  random.csv
data/information_retrieval_split/: metadata.csv  sampled_images.json  train.json
data/manual_cpe_labels/: cc.fips  cc.json
data/reference_annotations/: manually_annotated_references.csv  readme.md
data/sar_correlations/: readme.md
data/validation_test_split/: readme.md
docker/: Dockerfile
docs/: Makefile  awesome_search_examples.md  code_of_conduct.md  conf.py  configuration.md  database.md  generate_config_page.py  index.md  index.rst  installation.md  license.md  notebooks  oauth.md  quickstart.md  search_examples.md  tasks.md  tutorial.md  user-accounts.md  user_guide.md  web_dashboard.md
docs/api/: dataset.md  model.md  sample.md
examples/: cc_cpe_labeling.py  cc_oop_demo.py  fips_cpe_labeling.py  fips_iut_demo.py  fips_mip_demo.py  fips_oop_demo.py  label_studio_interface.txt  readme.md
notebooks/: cc_data_exploration.ipynb  cc_temporal_evolution_cryptographic_primitives.ipynb  cert_id_eval.ipynb  cpe_cve.ipynb  final_run.ipynb  fips_data.ipynb  fixed_sankey_plot.py  fuzzy_matching.ipynb  latex_plotting.ipynb  llm_annotation.ipynb  llm_annotation_prompt.txt  ocr.ipynb  validation_test_split.ipynb
notebooks/cc/: cert_id_eval.ipynb  chain_of_trust_plots.ipynb  cpe_cve.ipynb  cpe_eval.ipynb  dependency_analysis.ipynb  llm_annotation.ipynb  llm_annotation_prompt.txt  new_references.ipynb  paper2_plots.ipynb  processing_config.yaml  references.ipynb  scheme_eval.ipynb  temporal_trends.ipynb  vector_search.md  vector_search.py  vlm_pdf_extraction.ipynb  vulnerabilities.ipynb
notebooks/examples/: cc.ipynb  common_criteria.ipynb  dataset.ipynb  est_solution.ipynb  fips.ipynb  fips_iut.ipynb  fips_mip.ipynb  model.ipynb  protection_profiles.ipynb
notebooks/fips/: icmc_plots.ipynb  in_process.ipynb  references.ipynb  temporal_trends.ipynb  vulnerabilities.ipynb
notebooks/openssl/: cc_openssl.ipynb  fips_openssl.ipynb  manufacturer_cleanup.py  unification_dictionaries.py
paper_artifacts/chain_of_trust/: README.md
requirements/: all_requirements.txt  compile.sh  dev_requirements.in  dev_requirements.txt  docling_requirements.txt  nlp_requirements.txt  requirements.in  requirements.txt  test_requirements.txt
results/: download_active_certs.bat  download_active_updates.bat  download_archived_certs.bat  download_archived_updates.bat
scripts/: changed.py  ids.py  idsv2.py  tools.py
sec_certs/: __init__.py  __main__.py  analyze_certificates.py  anssi_parse.py  bsi_parse.py  cc.py  cc_categories.json  cc_sars.json  cc_sfrs.json  cert_processing.py  cert_rules.py  certificate.py  cli.py  commands.py  configuration.py  constants.py  cpe.py  cve.py  dataset.py  dataset_loader.py  download.py  download_files.py  extract_certificates.py  files.py  fips.py  fips_certificates.py  fips_oop_demo.py  fips_types.json  helpers.py  iut.py  meta_parser.py  mip.py  pandas_helpers.py  parallel_processing.py  pp.py  process_certificates.py  rules.yaml  serialization.py  settings-schema.json  settings.yaml  (+1 more)
sec_certs/admin/: __init__.py  commands.py  user.py  views.py
sec_certs/cc/: __init__.py  commands.py  sfrs.json  views.py
sec_certs/certificate/: cc_maintenance_update.py  certificate.py  common_criteria.py  fips.py  protection_profile.py
sec_certs/config/: configuration.py  settings-schema.json  settings.yaml
sec_certs/dataset/: __init__.py  common_criteria.py  cpe.py  cve.py  dataset.py  fips.py  fips_algorithm.py  fips_iut.py  fips_mip.py  json_path_dataset.py  protection_profile.py
sec_certs/entrypoints/: fips_certificates.py  process_certificates.py
sec_certs/fips/: __init__.py  commands.py  views.py
sec_certs/model/: __init__.py  cpe_matching.py  cve_matching.py  dependency_finder.py  dependency_vulnerability_finder.py  evaluation.py  reference_finder.py  sar_parser.py  sar_transformer.py  (+1 more)
sec_certs_page/: __init__.py  commands.py  dash.py  jinja.py  tasks.py  utils.py  views.py
src/: analyze_certificates.py  cert_rules.py  download_files.py  extract_certificates.py  fips_certificates.py  process_certificates.py  sanity.py  search_certficate.py  search_certificate.py  tags_constants.py
test/: test_cc_oop.py  test_cve_cpe_matching.py  test_download.py  test_fips_oop.py
tests/: conftest.py  fips_test_utils.py  settings_test.yaml  test_cc_heuristics.py  test_cc_oop.py  test_cc_schemes.py  test_cc_txt_processing.py  test_common.py  test_config.py  test_cpe.py  test_cpe_configurations.py  test_cve.py  test_cve_cpe_matching.py  test_cve_matching.py  test_download.py  test_fips_iut.py  test_fips_mip.py  test_fips_oop.py  test_nvd_dataset_builder.py  test_parallel_processing.py  test_rules.py  utils.py
(+921 files in other folders)
